# ChangeLog for dev-libs/jsoncpp
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/jsoncpp/ChangeLog,v 1.18 2015/05/12 17:57:03 mgorny Exp $

*jsoncpp-1.6.2 (12 May 2015)

  12 May 2015; Michał Górny <mgorny@gentoo.org> +jsoncpp-1.6.2.ebuild:
  Version bump to the ABI-incompatible 1.x branch

  05 May 2015; Jeroen Roovers <jer@gentoo.org> jsoncpp-0.10.2.ebuild:
  Mark ~ppc64 (bug #539126).

*jsoncpp-0.10.2 (01 May 2015)

  01 May 2015; Michał Górny <mgorny@gentoo.org> +jsoncpp-0.10.2.ebuild:
  Version bump. Fixes handling of embedded NUL bytes.

  13 Apr 2015; Mike Frysinger <vapier@gentoo.org> jsoncpp-0.10.1.ebuild:
  Add mips love.

  07 Apr 2015; Michał Górny <mgorny@gentoo.org> metadata.xml:
  Add myself as co-maintainer.

*jsoncpp-0.10.1 (07 Apr 2015)

  07 Apr 2015; Michał Górny <mgorny@gentoo.org> +jsoncpp-0.10.1.ebuild:
  Minor version bump.

  04 Apr 2015; Jeroen Roovers <jer@gentoo.org> jsoncpp-0.6.0_rc2.ebuild:
  Marked ~hppa (bug #539126).

  02 Mar 2015; Yixun Lan <dlan@gentoo.org> jsoncpp-0.6.0_rc2.ebuild:
  add arm64 support, tested on A53 board

*jsoncpp-0.6.0_rc2 (28 Feb 2014)

  28 Feb 2014; Mike Frysinger <vapier@gentoo.org> +jsoncpp-0.6.0_rc2.ebuild:
  Version bump #499612 by Zoltan Kovacs.

  17 Nov 2013; Pawel Hajdan jr <phajdan.jr@gentoo.org> -jsoncpp-0.5.0.ebuild,
  jsoncpp-0.5.0-r1.ebuild:
  Only setup python for USE=doc, bug #487574 by mgorny. Also tested by John W.
  Newman. Remove old.

  04 Apr 2013; Agostino Sarubbo <ago@gentoo.org> jsoncpp-0.5.0-r1.ebuild:
  Stable for x86, wrt bug #463426

  04 Apr 2013; Agostino Sarubbo <ago@gentoo.org> jsoncpp-0.5.0-r1.ebuild:
  Stable for amd64, wrt bug #463426

*jsoncpp-0.5.0-r1 (28 Feb 2013)

  28 Feb 2013; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  +jsoncpp-0.5.0-r1.ebuild:
  Version bump to avoid file collisions, bug #452234.

  25 Feb 2013; Pawel Hajdan jr <phajdan.jr@gentoo.org> jsoncpp-0.5.0.ebuild:
  Keyword ~arm
