@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/jsoncpp
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/jsoncpp/ChangeLog,v 1.18 2015/05/12 17:57:03 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/jsoncpp/ChangeLog,v 1.19 2015/05/20 00:28:41 mattst88 Exp $
+
+  20 May 2015; Matt Turner <mattst88@gentoo.org> jsoncpp-0.10.2.ebuild,
+  jsoncpp-1.6.2.ebuild:
+  Added ~alpha, bug 539126.
 
 *jsoncpp-1.6.2 (12 May 2015)
 
